# xlslang

./: .gitignore  Cargo.toml  README.md  setup.py
docs/: xlschecks.md
grammars/: formula_grammar.pest
src/: main.rs
src/xlslang/: grammar.py  parser.py  suppress_classes.py
src/xlslang/engines/: __init__.py  xls_noreduced.py  xls_reduced.py
src/xlslang/engines/datatypes/: __init__.py
src/xlslang/engines/functions/: __init__.py  xdatetime.py
src/xlslang/engines/pyengine/datatypes/: xstring.py
src/xlslang/visitors/: __init__.py  excel_like.py
tests/engine/: test_run.py
tests/parser/: test_run.py
xlschecks/: Cargo.toml
xlslang/: Cargo.toml
xlslang-file/: Cargo.toml
xlslang-file/src/: lib.rs
