[package]
name = "xlslang"
version = "0.2.1"
edition = "2024"
description = "Excel compiler and command line tools"
readme = "README.md"
rust-version = "1.86.0"
documentation = "https://github.com/cosmoscalibur/xlslang"
homepage = "https://github.com/cosmoscalibur/xlslang"
repository = "https://github.com/cosmoscalibur/xlslang"
license = "MIT"
keywords = ["excel", "compiler", "command line"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]

[dependencies]
zip.workspace = true
quick-xml.workspace = true
xlslang-file.workspace = true

[[bin]]
name = "xlschecks"
path = "src/bin/xlschecks.rs"
